--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.marsrealestate">
 
-    <!-- In order for our app to access the Internet, we need to define this permission. -->
-    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- TODO (06) Add the Internet permission to the app -->
 
     <application
         android:allowBackup="true"
