--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     annotationProcessor "com.github.bumptech.glide:compiler:$version_glide"
 
     // RecyclerView
